force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/Apttus_Config2__PriceRuleEntry__c.object-meta.xml
<CustomObject>
    <description>Represents a single entry in a price rule</description>
    <label>Price Rule Entry</label>
    <nameField>
        <displayFormat>RE-{0000000000}</displayFormat>
        <label>Rule Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Rule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>