force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__AdjustmentValueSource__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdjustmentValueSource__c</fullName>
    <description>The source for dynamic adjustment values</description>
    <inlineHelpText>The source for dynamic adjustment values</inlineHelpText>
    <label>Adjustment Value Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>