force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__AdjustmentValueType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdjustmentValueType__c</fullName>
    <description>The adjustment value type</description>
    <inlineHelpText>The adjustment value type</inlineHelpText>
    <label>Adjustment Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Constant</fullName>
                <default>true</default>
                <label>Constant</label>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>