force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__Dimension1Value__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension1Value__c</fullName>
    <description>The value for the first dimension. Only applicable to Matrix based rules.</description>
    <label>Dimension 1 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>