force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__Dimension4ListValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension4ListValue__c</fullName>
    <description>The list of values for the fourth dimension. Only applicable to List dimensions</description>
    <inlineHelpText>The list of values for the fourth dimension. Only applicable to List dimensions</inlineHelpText>
    <label>Dimension 4 List Value</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>