force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__Dimension4Value__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension4Value__c</fullName>
    <description>The value for the fourth dimension. Only applicable to Matrix based rules.</description>
    <label>Dimension 4 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>