force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__InclusionMethod__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InclusionMethod__c</fullName>
    <description>The inclusion rule method. Only applicable to Inclusion based rules.</description>
    <label>Inclusion Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Any Product</fullName>
            </value>
            <value>
                <fullName>All Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>