force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__LoyaltyLevel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LoyaltyLevel__c</fullName>
    <description>Describes the loyalty level applied when conditions are met.</description>
    <label>Loyalty Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>