force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__MatchProductGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchProductGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product group to match. Only applicable to Inclusion based rules.</description>
    <inlineHelpText>ID of the product group to match. Only applicable to Inclusion based rules.</inlineHelpText>
    <label>Match Product Group</label>
    <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
    <relationshipLabel>Price Rule Entries (Match)</relationshipLabel>
    <relationshipName>MatchPriceRuleEntries</relationshipName>
    <type>Lookup</type>
</CustomField>