force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__MaxProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxProducts__c</fullName>
    <description>The maximum number of products that may be selected for the rule to apply. Only applicable to Volume based rules.</description>
    <label>Max Products</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>