force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__MaxQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxQuantity__c</fullName>
    <description>The maximum quantity of products that may be selected for the rule to apply. Only applicable to Volume based rules.</description>
    <label>Max Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>