force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__MinQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MinQuantity__c</fullName>
    <description>The minimum quantity of products that must be selected for the rule to apply. Only applicable to Volume based rules.</description>
    <label>Min Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>