force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__PeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
    <description>The period end date. The entry becomes ineffective after this date.</description>
    <inlineHelpText>The period end date. The entry becomes ineffective after this date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>