force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__PeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
    <description>The period start date. The entry becomes effective on this date.</description>
    <inlineHelpText>The period start date. The entry becomes effective on this date.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>