force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__PriceRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceRuleId__c</fullName>
    <description>ID of the associated rule</description>
    <label>Price Rule</label>
    <referenceTo>Apttus_Config2__PriceRule__c</referenceTo>
    <relationshipLabel>Entries</relationshipLabel>
    <relationshipName>RuleEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>