force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductCategory__c</fullName>
    <description>The product category associated with the rule. Only applicable to Volume based rules.</description>
    <label>Product Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>