force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__ProductFamilies__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFamilies__c</fullName>
    <description>The list of product families associated with the entry</description>
    <inlineHelpText>The list of product families associated with the entry</inlineHelpText>
    <label>Product Families</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>