force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__ProductsOper__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductsOper__c</fullName>
    <description>The products criteria operator</description>
    <inlineHelpText>The products criteria operator</inlineHelpText>
    <label>Products Oper</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>all</fullName>
            </value>
            <value>
                <fullName>any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>