force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__Term__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Term__c</fullName>
    <description>The term associated with the rule</description>
    <inlineHelpText>The term associated with the rule</inlineHelpText>
    <label>Term</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>