force-app/main/default/objects/Apttus_Config2__PriceRuleEntry__c/fields/Apttus_Config2__TermPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TermPeriodStart__c</fullName>
    <description>The term period start indicator</description>
    <inlineHelpText>The term period start indicator</inlineHelpText>
    <label>Term Period Start</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At Begin Of Term</fullName>
            </value>
            <value>
                <fullName>At End Of Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>